TRIX-22 fixed illegible memory/disk filters

--- a/app/src/app/instances/instances.component.scss
+++ b/app/src/app/instances/instances.component.scss
@@ -109,6 +109,11 @@
 .filters
 {
   width: 240px;
+
+  .btn-group + *
+  {
+    margin-top: 1rem;
+  }
 }
 
 .form-check-label
